# airow

./: LICENSE  Makefile  README.md  modelling.ipynb  pyproject.toml  setup.py  software-engineer-task.md
.github/workflows/: python-app.yml
data/: laps.json  samples.json  summary.json  training_summary.json
src/training_analytics/: README.md  __init__.py  data.py
tests/: __init__.py  test_data.py
