[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "training_analytics"
version = "0.1.0"
description = "Processing and analyzing performance data from activity computers"
readme = "README.md"
authors = [
  {name = "Wojtek Kulma", email = "wklm@pm.me"}
]
maintainers = [
  {name = "Wojtek Kulma", email = "wklm@pm.me"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "matplotlib>=3.4.0",
  "scipy>=1.7.0",
  "sklearn>=0.24.0"  # Added for evaluation metrics like MSE
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "pytest-cov",  # for coverage report with pytest
    "black",  # code formatting
    "isort",  # import sorting
    "pre-commit"  # pre-commit hooks
]

[project.urls]
bugs = "https://github.com/wklm/training_analytics/issues"
changelog = "https://github.com/wklm/training_analytics/blob/master/changelog.md"
homepage = "https://github.com/wklm/training_analytics"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

# Pytest
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
    "tests"
]

# Black (Code Formatter)
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Ruff
[tool.ruff]
line-length = 80
target-version = "py312"
select = ["E", "F", "W", "C", "N", "B", "I"]

# isort (Import Sorting)
[tool.isort]
profile = "black"

# pre-commit (Pre-commit hooks configuration)
[tool.pre-commit]
repos = [
  { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.1.0", hooks = [{ id = "trailing-whitespace" }, { id = "end-of-file-fixer" }, { id = "check-yaml" }] },
  { repo = "https://github.com/psf/black", rev = "23.1a1", hooks = [{ id = "black" }] },
  { repo = "https://github.com/pre-commit/mirrors-isort", rev = "v5.9.3", hooks = [{ id = "isort" }] },
  { repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v0.910", hooks = [{ id = "mypy" }] },
  { repo = "https://github.com/pre-commit/mirrors-ruff", rev = "v0.0.241", hooks = [{ id = "ruff" }] }
]